<resources>
    <string name="app_name">Easy Work</string>

    <string name="login">LOGIN</string>
    <string name="log_out">Log Out</string>
    <string name="create_account">CREATE ACCOUNT</string>

    <string name="logo">LOGO</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ask_have">Already a member? Login</string>
    <string name="ask_not_have">No account yet? Create one</string>
    
    <string name="program_name">ProgramName</string>
    <string name="member1">Member1 Email</string>
    <string name="member2">Member2 Email(Optional)</string>
    <string name="member3">Member3 Email(Optional)</string>
    <string name="submit">SUBMIT</string>

    <!--测试界面-->
    <string name="test1">APP ID</string>
    <string name="test2">FB Ads ID</string>
    <string name="test3">Is Game flow Normal</string>
    <string name="test4">Share and Leaderboard</string>
    <string name="test5">Can Ads Pop Up</string>

    <!--项目信息界面-->
    <string name="start_test">Start Test</string>
    <string name="testing">Testing...</string>
    <string name="restart_project">Restart Project</string>
    <string name="progress_testing">Progress: Testing!</string>
    <string name="progress_finished">Progress: Finished!</string>

    <!--任务卡界面-->
    <string name="task_name">Task Name</string>
    <string name="task_member">The executer\'s email</string>
    <string name="task_member_name">The executer\'s name</string>
    <string name="task_ddl">Double click to set deadline time</string>
    <string name="task_subscribe">Content</string>
    <string name="task_type">Task Type</string>
    <string name="task_finish">Finish</string>

    <!--菜单界面-->
    <string name="home">Home</string>
    <string name="doing">&#160;&#160;&#160;&#160;&#160;Doing</string>
    <string name="finished">&#160;&#160;&#160;&#160;&#160;Finished</string>
    <string name="bin">Bin</string>
    <string name="edit_pro">Edit Project</string>
    <string name="detail">Project Detail</string>
    <string name="restore">Restore Task</string>
</resources>
