<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:id="@+id/projectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="123"
            android:textSize="18sp"
            />

        <!-- TaskName Label -->

        <EditText android:id="@+id/taskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/task_name"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>


        <!-- Password Label -->

        <EditText android:id="@+id/taskMember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/task_member"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            />

        <EditText android:id="@+id/taskDDL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/task_ddl"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            />

        <EditText android:id="@+id/Subscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="5"
            android:inputType="textMultiLine"
            android:hint="@string/task_subscribe"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/submit"/>


    </LinearLayout>
</ScrollView>